# KindleAPI

./: Cargo.toml  Dockerfile  app.json
src/: constant.rs  kindle.rs  main.rs
