[package]
name = "kindleota"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
reqwest = {version="0.11.5",features=["blocking"]}
openssl = { version = "0.10", features = ["vendored"] }
serde = { version="1.0.130",features = ["derive"] }
serde_json = "1.0.68"
rocket = "0.4.10"
